# txt-crypt

./: CMakeLists.txt  README.md
docs/superpowers/specs/: 2026-03-31-txt-crypt-design.md
include/txt_crypt/: version.h
src/: main.cpp
src/cli/: cli_parser.cpp  cli_parser.h  progress.cpp  progress.h
src/core/: crypto_engine.cpp  crypto_engine.h  file_format.h  kdf.cpp  kdf.h  stream_processor.cpp  stream_processor.h
src/io/: base64.cpp  base64.h  file_reader.cpp  file_reader.h  file_writer.cpp  file_writer.h
src/utils/: error_codes.cpp  error_codes.h  secure_memory.h  temp_file.cpp  temp_file.h  thread_pool.cpp  thread_pool.h
tests/: CMakeLists.txt
tests/unit/: test_base64.cpp  test_crypto_engine.cpp  test_file_format_minimal.cpp  test_kdf.cpp  test_secure_memory_minimal.cpp  test_temp_file.cpp
